--- a/c_action_remap/configs/config.yaml
+++ b/c_action_remap/configs/config.yaml
@@ -1,12 +1,9 @@
-action:
-  - -150.0
-  - -50.0
-  - 0.0
-  - 50.0
-  - 150.0
-
+sim: "LunarLander-v2"
 units: 128
 layer_num: 1
 batch_size: 128
 learning_rate: 1e-5
 epochs: 100
+e_init: 0.9
+e_decay_factor: 0.999
+e_min: 0.05
