Add | Custom mountaincar env train & heuristic data collect code

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,5 @@
 # sh files
 /scripts/*.sh
 
-# config directory
-/b_policy/configs
-/c_action_remap/configs
-
 # Dummy ipynb file
-Analysis.ipynb
+./Analysis.ipynb
