--- a/c_action_remap/configs/config.yaml
+++ b/c_action_remap/configs/config.yaml
@@ -4,6 +4,7 @@ layer_num: 1
 batch_size: 1024
 learning_rate: 0.0001
 epochs: 2000
+patience: 20
 buffer_size: 20000
 min_buffer_size: 10000
 e_init: 0.9
